--- a/README
+++ b/README
@@ -5,6 +5,7 @@ Steps to compile & run:
     - Git clone or download a zip of the repo in order to run the code
     - On the pgAdmin database COMP3005A3Database, right-click, choose Query tool, and Open the COMP3005A3Database.sql file and run it
     - On lines 12 & 13 on Main.java, make sure you enter your username and password in order to connect to the database
+    - In the main method, comment out which functionality you want to try one at a time (add, delete or update)
     - In the main method, make changes to the method parameters to add a student, delete a student, or update a students email.
     - Run Main.main() and see the results or check the database on pgAdmin
 
